@@ -14,6 +14,8 @@ improve links on readme
 
 test release
 
+readme updates
+
 = 1.0.2 - March 19, 2019 =
 
 * Fix - WooCommerce Subscription > 2.5.0
